# processSch

./: CMakeLists.txt  Makefile
src/: os-sim.c  os-sim.h  process.c  student.c
